Fix collapsed navigation bar

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -4,7 +4,8 @@
 @use "@styles/z-index";
 @use "@styles/misc";
 
-.container {
+.container,
+.fixedContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
